@@ -1,5 +1,6 @@
 package org.gamja.gamzatechblog.domain.like.infrastructure;
 
+import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
@@ -9,6 +10,7 @@ import org.gamja.gamzatechblog.domain.like.model.dto.response.LikeResponse;
 import org.gamja.gamzatechblog.domain.like.model.entity.QLike;
 import org.gamja.gamzatechblog.domain.like.service.port.LikeQueryPort;
 import org.gamja.gamzatechblog.domain.post.model.entity.QPost;
+import org.gamja.gamzatechblog.domain.postimage.model.entity.QPostImage;
 import org.gamja.gamzatechblog.domain.posttag.model.entity.QPostTag;
 import org.gamja.gamzatechblog.domain.profileimage.model.entity.QProfileImage;
 import org.gamja.gamzatechblog.domain.tag.model.entity.QTag;
@@ -25,6 +27,7 @@ import lombok.RequiredArgsConstructor;
 @RequiredArgsConstructor
 @Repository
 public class LikeQueryAdapter implements LikeQueryPort {
+
 	private final JPAQueryFactory queryFactory;
 
 	@Override
@@ -59,6 +62,7 @@ public class LikeQueryAdapter implements LikeQueryPort {
 		QProfileImage profileImage = QProfileImage.profileImage;
 		QPostTag pt = QPostTag.postTag;
 		QTag tag = QTag.tag;
+		QPostImage postImage = QPostImage.postImage;
 
 		return queryFactory
 			.select(
@@ -68,6 +72,8 @@ public class LikeQueryAdapter implements LikeQueryPort {
 				post.content,
 				post.user.nickname,
 				profileImage.profileImageUrl,
+				postImage.id,            // 이미지 ID
+				postImage.postImageUrl,  // 이미지 URL
 				like.createdAt,
 				tag.tagName
 			)
@@ -77,6 +83,7 @@ public class LikeQueryAdapter implements LikeQueryPort {
 			.leftJoin(qUser.profileImage, profileImage)
 			.leftJoin(post.postTags, pt)
 			.leftJoin(pt.tag, tag)
+			.leftJoin(post.images, postImage)   // 포스트 → 이미지 조인
 			.where(like.user.eq(user))
 			.orderBy(like.createdAt.desc())
 			.offset(pageable.getOffset())
@@ -87,10 +94,11 @@ public class LikeQueryAdapter implements LikeQueryPort {
 	private List<LikeResponse> mapTuplesToResponses(List<Tuple> rows) {
 		QLike like = QLike.like;
 		QPost post = QPost.post;
-		QUser qUser = QUser.user;
 		QProfileImage profileImage = QProfileImage.profileImage;
 		QTag tag = QTag.tag;
+		QPostImage postImage = QPostImage.postImage;
 
+		// Like ID별로 묶기
 		Map<Long, List<Tuple>> grouped = rows.stream()
 			.collect(Collectors.groupingBy(t -> t.get(like.id)));
 
@@ -98,8 +106,15 @@ public class LikeQueryAdapter implements LikeQueryPort {
 			.map(entry -> {
 				Long likeId = entry.getKey();
 				List<Tuple> list = entry.getValue();
-				Tuple first = list.get(0);
 
+				// 좋아요당 첫 번째(가장 작은 ID) 이미지를 thumbnail로 선택
+				String thumbnail = list.stream()
+					.filter(t -> t.get(postImage.postImageUrl) != null)
+					.min(Comparator.comparing(t -> t.get(postImage.id)))
+					.map(t -> t.get(postImage.postImageUrl))
+					.orElse(null);
+
+				Tuple first = list.get(0);
 				String fullContent = first.get(post.content);
 				String snippet = fullContent.length() > 100
 					? fullContent.substring(0, 100)
@@ -110,20 +125,18 @@ public class LikeQueryAdapter implements LikeQueryPort {
 					.distinct()
 					.toList();
 
-				String writerNickname = first.get(post.user.nickname);
-				String writerImgUrl = first.get(profileImage.profileImageUrl);
-
 				return new LikeResponse(
 					likeId,
 					first.get(post.id),
 					first.get(post.title),
 					snippet,
-					writerNickname,
-					writerImgUrl,
+					first.get(post.user.nickname),
+					first.get(profileImage.profileImageUrl),
+					thumbnail,
 					first.get(like.createdAt),
 					tags
 				);
 			})
-			.collect(Collectors.toList());
+			.toList();
 	}
 }
